resumeBuilder/src/index.css
/* ... */
.searchTerm:focus{
  color: rgb(117, 117, 117);
  background-color: black;
  font-family: 'Quicksand', sans-serif;
  border: 2px solid var(--purple);
  transition-duration: .3s;
} 

 .searchTerm:focus + .searchButton {
  transition-duration: .3s;
  height: 34px;
}

input {
  color: rgb(117, 117, 117);
  font-family: 'Quicksand', sans-serif;
}

.searchTerm:hover:not(:focus) {
  border: 1px solid rgb(88, 88, 90);
}

.searchTerm:hover:not(:focus) + .searchButton {
  height: 32px;
  transition-duration: .3s;
}

.searchButton {
  width: 40px;
  height: 30px;
  /* border: 1px solid #00B4CC; */
  background: rgb(42, 42, 45);
  text-align: center;
  color: #fff;
  border-radius: 0 5px 5px 0;
  border: none;
  cursor: pointer;
  font-size: 20px;
  background-image: url(./Search.svg);
  background-size: 33px;
  background-position: 2px;
}

/*Resize the wrap to see the search bar change!*/
  .wrap{
  width: 30%;
  top: 50%;
  left: 50%;
}

.project-title {
  display: grid;
  grid-column: 1 / -1;
  padding-left: 1px;
  padding-bottom: none;
  padding-top: 30px;
  height: 80px;
  color: rgb(117, 117, 117);
  font-family: 'Roboto', sans-serif;
  font-size: 22px;
  font-weight: 700;
  top: -50px;
}

h4{
  color: white;
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: rgb(29, 29, 32);
  border-radius: 8px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.075);
  display: grid;
  gap: 10px;
  grid-template-rows: max-content 1fr max-content;
  padding: 30px;
  transition: all 0.4s;
  color: var(--txt);
  font-family: 'Quicksand', sans-serif;
}

.card2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: rgb(29, 29, 32);
  border-radius: 8px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.075);
  display: grid;
  grid-template-rows: max-content 1fr max-content;
  transition: all 0.4s;
  color: var(--txt);
  font-family: 'Quicksand', sans-serif;
  width: 325px;
  height: 325px;
}

.card h2{
  padding-left: 20px;
}

.card:hover {
  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
  transition: all 0.4s;
  outline: 2px solid var(--purple);
}

#title {
  width: 100%;
  position: absolute;
  padding: 0px;
  margin: 0px auto;
  text-align: center;
  font-size: 27px;
  color: rgba(255, 255, 255, 1);
  font-family: 'Open Sans', sans-serif;
  z-index: 9999;
  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
}

.bottom-border {
  color: white;
}

.ql-editor {
  height: 300px;
}

.ql-editor p {
  color: #f6fff8b7;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 10pt;
  font-family: "Montserrat";
  font-style: normal;
}

.ql-editor li {
  color: #f6fff8b7;
}

.ql-editor h1 {
  color: #f6fff8b7;
  font-weight: 400;
  font-size: 20pt;
  font-family: "Arial";
  text-decoration: none;
  vertical-align: baseline;
  font-style: normal;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 1.05;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
  page-break-after: avoid;
}

.ql-editor h2 {
  color: #f6fff8b7;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 16pt;
  font-family: "Arial";
  font-style: normal;
  line-height: 1.05;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
  padding-top: 0;
  padding-bottom: 0;
  page-break-after: avoid;
  flex-direction: row;
}

.ql-editor h3 {
  color: #f6fff8b7;
  font-size: 14pt;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-family: "Arial";
  font-style: normal;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 1.05;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
  page-break-after: avoid;
}

.ql-snow .ql-picker.ql-header .ql-picker-label::before {
  color: #f6fff8b7;
}

.ql-snow .ql-stroke {
  stroke: #f6fff8b7;
}

.record p {
  color: white;
}

.record {
  display: flex;
  flex-direction: row;
}

#top-bar {
  display: flex;
  flex-direction: row;

  justify-content: space-around;
  align-items: center;
  padding: 100px;
  background-color: rgb(29, 29, 32);
  border-radius: 8px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.075);
  color: var(--txt);
  font-family: 'Quicksand', sans-serif;
}

.toggle-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: absolute; /* Keep absolute positioning */
  top: 30px;
  left: 240px; /* Initially position 240px from the left */
  transition: left 0.3s ease; /* Animate only the left property */
  width: calc(100vw - 240px); /* Calculate width based on viewport width minus 240px */
}

@media (max-width: 768px) { /* Common breakpoint for tablets and below */
  .toggle-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: absolute; /* Keep absolute positioning */
    top: 30px;
    left: 422px; /* Align with the left edge of the viewport */
    transition: left 0.3s ease; /* Animate only the left property */
    width: 100vw; /* Full viewport width */
  }
}

.toggle-switch {
  width: 200px;
  height: 40px;
  background-color: #333;
  border-radius: 20px;
  display: flex;
  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
  position: absolute;
  top: 6px;
}

.toggle-tab {
  width: 100px;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 0.9rem;
  cursor: pointer;
  transition: all 0.3s ease;
  z-index: 2;
}

.active {
  background-color: var(--purple);
  border-radius: 20px;
}

